stream toList() -> Collectors.toList() 로 변경